2003-05-06  Pascal Obry  <p.obry@wanadoo.fr>

	* soap-message-reader.adb:
	(Characters): Add Unreferenced pragma for Tmp.
	(Ignorable_Whitespace): Idem.

2003-04-15  Pascal Obry  <p.obry@wanadoo.fr>

	* soap-types.ads:
	Add some comments. Reorganize private code a bit.

2003-03-22  Pascal Obry  <p.obry@wanadoo.fr>

	* soap-wsdl-parser.adb:
	(Accept_RPC): Removed.
	(Accept_Document): New procedure.
	(Parse_Binding): Raise an exception if document style binding and
	 not activated.
	
	* soap-wsdl-parser.ads:
	(Accept_RPC): Removed.
	(Accept_Document): New procedure.
	(Object): Remove field Accept_RPC, add field Accept_Dcument.
	
2003-03-22  Pascal Obry  <p.obry@wanadoo.fr>

	* soap-types.ads:
	(XML_Any_Type): New constant.

	* soap-wsdl-parser.adb:
	(Skip_Error): New variable.
	(Continue_On_Error): New procedure.
	(Parse): Display message when no service tag have been found.
	(Parse_Array): Check for unsupported ArrayOfanyType type.
	(Parse_Binding): Catch WSDL_Error exceptions. Display error
	 message and re-raise only if no in continue-on-error mode.
	(Parse_Parameter): Properly detect unsupported anyType type.
	(Parse_Part;): Idem.

	* soap-wsdl-parser.ads:
	(Continue_On_Error): New procedure.

2003-03-19  Pascal Obry  <p.obry@wanadoo.fr>

	* soap-client.adb:
	(Call): Add parameters User, Pwd, Proxy, Proxy_User and Proxy_Pwd.
	 Pass these variables to the AWS.Client.SOAP_Post call.

	* soap-client.ads:
	(Call): Add parameters User, Pwd, Proxy, Proxy_User and Proxy_Pwd.

	* soap-generator-skel.adb:
	(New_Procedure): Fix layout of some generated code. Generate code
	 to check for SOAPAction, return a SOAP error message if the
	 SOAPAction is not ok.

	* soap-generator-stub.adb:
	(New_Procedure): Fix layout of some generated code. Generate code
	 for proxy authentication if needed.

	* soap-generator.adb:
	(Set_Proxy): New procedure.
	(Put_Header): Fix layout of some generated code.

	* soap-generator.ads:
	(Set_Proxy): New procedure.